--- a/ch3ch2oh/transmission-client/pom.xml
+++ b/ch3ch2oh/transmission-client/pom.xml
@@ -34,6 +34,17 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.59</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.9</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.parsers</groupId>
+      <artifactId>jaxp-api</artifactId>
+      <version>1.4.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
