--- a/ch3ch2oh/transmission-client/pom.xml
+++ b/ch3ch2oh/transmission-client/pom.xml
@@ -40,11 +40,10 @@
       <version>4.5.9</version>
     </dependency>
     <dependency>
-      <groupId>javax.xml.parsers</groupId>
-      <artifactId>jaxp-api</artifactId>
-      <version>1.4.5</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.26</version>
     </dependency>
-
   </dependencies>
 
   <build>
