--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+# Ignore App.java
+App.java
+AppTest.java
